<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DawnGate Codex</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dg_logo">DawnGate Logo</string>
    <string name="shapers">Shapers</string>
    <string name="items">Items</string>
    <string name="minimap">Minimap</string>
    <string name="builds">Builds</string>
    <string name="title_activity_shapers_view">ShapersView</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
