<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp" >

                <Button
                    android:id="@+id/shapersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_tactician"
                    android:gravity="center_vertical|center_horizontal"
                    android:minHeight="0dp"
                    android:minWidth="0dp" 
                    android:onClick="homeButtonClicked"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/shapers"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp" >

                <Button
                    android:id="@+id/itemsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_consumable_potion_healingpotion"
                    android:minHeight="0dp"
                    android:minWidth="0dp" 
                    android:onClick="homeButtonClicked"/>

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/items"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/light" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp" >

                <Button
                    android:id="@+id/minimapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_minimap"
                    android:minHeight="0dp"
                    android:minWidth="0dp" 
                    android:onClick="homeButtonClicked"/>

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/minimap"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp" >

                <Button
                    android:id="@+id/buildsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_legendary_destruction"
                    android:minHeight="0dp"
                    android:minWidth="0dp" 
                    android:onClick="homeButtonClicked"/>

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/builds"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/light" />

            </LinearLayout>

        </LinearLayout>
	
    </LinearLayout>

	<ImageView
	    android:id="@+id/dgLogo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_below="@id/linearLayout1"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/dg_logo"
	    android:src="@drawable/ic_dawngate_final5_16" />

</RelativeLayout>